[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poseidon"
version = "0.1.0"
description = "Scientific data analysis and visualization tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["src"]
